--- a/dashboard.html
+++ b/dashboard.html
@@ -53,7 +53,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="">
+          <a class="nav-link  " href="transfer.html">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>office</title>
@@ -73,7 +73,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  " href="pages/billing.html">
+          <a class="nav-link  " href="">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 43 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <title>credit-card</title>
@@ -217,7 +217,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+                  <a class="nav-link mb-0 px-0 py-1 " href="transfer.html" role="tab" aria-selected="false">
                     <svg class="text-dark" width="16px" height="16px" viewBox="0 0 40 44" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <title>document</title>
                       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -345,7 +345,7 @@
                 </div>
                 <div class="col-4 text-end">
                   <a href="javascript:;">
-                    <i class="ni ni-credit-card text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Profile"></i>
+                    <i class="ni ni-credit-card text-secondary text-sm" ></i>
                   </a>
                 </div>
               </div>
@@ -361,7 +361,7 @@
                     </div>
                   </div>
                   <div class="d-flex align-items-center text-danger text-gradient text-sm font-weight-bold">
-                    - $ 2,500 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1"></i></button>
+                    - $ 2,500 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Download Receipt"></i></button>
                   </div>
                 </li>
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
@@ -373,7 +373,7 @@
                     </div>
                   </div>
                   <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
-                    + $ 2,000 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1"></i></button>
+                    + $ 2,000 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Download Receipt"></i></button>
                   </div>
                   
                 </li>
@@ -398,7 +398,7 @@
                     </div>
                   </div>
                   <div class="d-flex align-items-center text-success text-gradient text-sm font-weight-bold">
-                    + $ 2,000 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1"></i></button>
+                    + $ 2,000 <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="fas fa-copy text-lg me-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Download Receipt"></i></button>
                   </div>
                 </li>
               </ul>
@@ -409,12 +409,12 @@
           <div class="card h-100">
             <div class="card-header pb-0 p-3">
               <div class="row">
-                <div class="col-md-8 d-flex align-items-center">
+                <div class="col-8 d-flex align-items-center">
                   <h6 class="mb-0">Virtual Card Information</h6>
                 </div>
-                <div class="col-md-4 text-end">
+                <div class="col-4 text-end">
                   <a href="javascript:;">
-                    <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Profile"></i>
+                    <i class="fas fa-user-edit text-secondary text-sm" ></i>
                   </a>
                 </div>
               </div>
