--- a/transfer.html
+++ b/transfer.html
@@ -280,7 +280,7 @@
              
               </div>
               <div class="text-center">
-                <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">TRANSFER FUND </button>
+               <a href="taxcode.html"><button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">TRANSFER FUND </button></a>
             </div>
           </div>
             </form>
